--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>easier-homework</title>
-        <!--Link to css-->
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="deco">
             <h1>header</h1>
         </header>
-        <nav>
+        <nav class="deco">
             <h1>nav</h1>
         </nav>
-        <section>
+        <section class="deco">
             <h1>section</h1>
             <article>
                 <h1>article</h1>
@@ -23,10 +23,10 @@
 
             </article>
         </section>
-        <aside>
+        <aside class="deco">
             <h1>aside</h1>
         </aside>
-        <footer>
+        <footer class="deco">
             <h1>footer</h1>
         </footer>
 
