--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
         <section class="deco">
             <h1>section</h1>
             <article>
-                <h1>article</h1>
-                <header>h1</header>
-                <header>h2</header>
-                <header>h3</header>
+                    <h1>article</h1>
+                <div id="head">
+                    <header id="head-1">h1,</header>
+                    <header id="head-2">h2,</header>
+                    <header id="head-3">h3</header>
+                </div>
+                <div id="paragragh">
                 <p>p</p>
+                </div>
 
             </article>
         </section>
         <aside class="deco">
             <h1>aside</h1>
         </aside>
-        <footer class="deco">
+        <footer>
             <h1>footer</h1>
         </footer>
 
